--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="navbar">
           <div class="logo">
-           <a href="index.html"> <img src="/images/shopping cart-logo_.png" width="100px" /></a>
+           <a href="index.html"> <img src="shopping cart-logo_.png" width="100px" /></a>
           </div>
           <nav>
             <ul id="menuItems">
@@ -27,7 +27,7 @@
             </ul>
           </nav>
           <a href="cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
-          <img src="/images/hamburger.png" class="menu-icon" onclick="menutoggle()">
+          <img src="hamburger.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
           <div class="col-2">
@@ -40,7 +40,7 @@
             <a href="https://dir.indiamart.com/impcat/gym-equipments.html" class="btn">Explore Now &#8594;</a>
           </div>
           <div class="col-2">
-            <img src="/images/weightlifting-2227543_1280.png" alt="" />
+            <img src="weightlifting-2227543_1280.png" alt="" />
           </div>
         </div>
       </div>
@@ -51,13 +51,13 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <img src="/images/fashion-1.jpg" alt="">
+                    <img src="fashion-1.jpg" alt="">
                 </div>
                 <div class="col-3">
-                    <img src="/images/fashion-2.jpg" alt="">
+                    <img src="fashion-2.jpg" alt="">
                 </div>
                 <div class="col-3">
-                    <img src="/images/fashion-3jpg.jpg" alt="">
+                    <img src="fashion-3jpg.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <a href="product_details.html"><img src="/images/product-1jpg.jpg" width="150px" height="200px"></a>
+            <a href="product_details.html"><img src="product-1jpg.jpg" width="150px" height="200px"></a>
             <a href="product_details.html"><h4>Red T-Shirt</h4></a>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -80,7 +80,7 @@
             <p>$50.00</p>
         </div>
         <div class="col-4">
-            <img src="/images/product-6.jpg" width="150px" height="200px">
+            <img src="product-6.jpg" width="150px" height="200px">
             <h4>Puma Black T-Shirt</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -92,7 +92,7 @@
             <p>$60.00</p>
         </div>
         <div class="col-4">
-            <img src="/images/product-5.jpg" width="150px" height="200px">
+            <img src="product-5.jpg" width="150px" height="200px">
             <h4>White Shoe</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -104,7 +104,7 @@
             <p>$70.00</p>
         </div>
         <div class="col-4">
-            <img src="/images/product-8.jpg" width="150px" height="200px">
+            <img src="product-8.jpg" width="150px" height="200px">
             <h4>Watch-Black dial</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -121,7 +121,7 @@
     <h2 class="title">Latest Products</h2>
     <div class="row">
     <div class="col-4">
-        <img src="/images/product-1 (1).png" width="150px" height="200px">
+        <img src="product-1 (1).png" width="150px" height="200px">
         <h4>Apple iphone</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -133,7 +133,7 @@
         <p>$500.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/product-10.png" width="150px" height="200px">
+        <img src="product-10.png" width="150px" height="200px">
         <h4>Samsung s9</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -145,7 +145,7 @@
         <p>$600.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/product-2.png" width="150px" height="200px">
+        <img src="product-2.png" width="150px" height="200px">
         <h4>Nokia</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -157,7 +157,7 @@
         <p>$250.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/socks-.jpg" width="150px" height="200px">
+        <img src="socks-.jpg" width="150px" height="200px">
         <h4>Socks</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -169,7 +169,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/books.jpg" width="150px" height="200px">
+        <img src="books.jpg" width="150px" height="200px">
         <h4>books</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -181,7 +181,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/bottles.jpg" width="150px" height="200px">
+        <img src="bottles.jpg" width="150px" height="200px">
         <h4>Neon Bottles</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -193,7 +193,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/product-8.png" width="150px" height="200px">
+        <img src="product-8.png" width="150px" height="200px">
         <h4>iphone 6</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -205,7 +205,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/pocket-watch-jpg.jpg" width="150px" height="200px">
+        <img src="pocket-watch-jpg.jpg" width="150px" height="200px">
         <h4>Pocket watch</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -217,7 +217,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/product-14.webp" width="150px" height="200px">
+        <img src="product-14.webp" width="150px" height="200px">
         <h4>Ear Bud</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -229,7 +229,7 @@
         <p>$300.00</p>
     </div>
     <div class="col-4">
-        <img src="/images/product-18.jpg" width="150px" height="200px">
+        <img src="product-18.jpg" width="150px" height="200px">
         <h4>Maroon T-Shirt</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -247,7 +247,7 @@
     <div class="small-container">
         <div class="row">
             <div class="col-2">
-                <img src="/images/product-16.jpg" class="offer-img" alt="">
+                <img src="product-16.jpg" class="offer-img" alt="">
             </div>
             <div class="col-2">
                 <p>Exclusively Available on Shop Now</p>
@@ -318,16 +318,16 @@
     <div class="small-container">
         <div class="row">
             <div class="col-5">
-                <img src="/images/adidas-golf-logo.png">
+                <img src="adidas-golf-logo.png">
             </div>
             <div class="col-5">
-                <img src="/images/american-eagle-outfitters-logo-vector.svg">
+                <img src="american-eagle-outfitters-logo-vector.svg">
             </div>
             <div class="col-5">
-                <img src="/images/galaxy-logo.png">
+                <img src="galaxy-logo.png">
             </div>
             <div class="col-5">
-                <img src="/images/g-shock-logo.png">
+                <img src="g-shock-logo.png">
             </div>
         </div>
     </div>
@@ -341,12 +341,12 @@
                 <h3>Download Our App</h3>
                 <p>Download App fpr Android and iOS mobile phones.</p>
                 <div class="app-logo">
-                    <img src="/images/playStore.png">
-                    <img src="/images/app-store.png">
+                    <img src="playStore.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="/images/shopping cart-logo_.png" width="100px">
+                <img src="shopping cart-logo_.png" width="100px">
                 <p>Our purpose is to Sustainably Make the Pleasure and Benefits of Sports Accesible to Many.</p>
             </div>
             <div class="footer-col-3">
