--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a href="account.html">Account</a></li>
             </ul>
           </nav>
-          <a href="cart.html"><img src="/images/cart.png" width="30px" height="30px"></a>
+          <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
           <img src="hamburger.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
@@ -68,7 +68,7 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
         <div class="col-4">
-            <a href="product_details.html"><img src="product-1jpg.jpg" width="150px" height="200px"></a>
+            <a href="product_details.html"><img src="product-1.jpg" width="150px" height="200px"></a>
             <a href="product_details.html"><h4>Red T-Shirt</h4></a>
             <div class="rating">
                 <i class="fa fa-star"></i>
