--- a/account.html
+++ b/account.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accounts/Login/register here ate ShopNow.com</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/script.js">
+    <link rel="stylesheet" href="script.js">
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Josefin+Sans&family=Kalam:wght@700&family=Mooli&family=Poppins:wght@300;500;600;700&family=Wavefont:wght@300&display=swap");
     </style>
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="navbar">
         <div class="logo">
-          <img src="/images/shopping cart-logo_.png" width="100px" />
+          <img src="shopping cart-logo_.png" width="100px" />
         </div>
         <nav>
           <ul id="menuItems">
@@ -29,9 +29,9 @@
             <li><a href="">Account</a></li>
           </ul>
         </nav>
-        <img src="/images/cart.png" width="30px" height="30px" />
+        <img src="cart.png" width="30px" height="30px" />
         <img
-          src="/images/hamburger.png"
+          src="hamburger.png"
           class="menu-icon"
           onclick="menutoggle()"
         />
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img src="/images/image1.png" width="100%">
+                <img src="image1.png" width="100%">
             </div>
             <div class="col-2">
               <div class="form-container">
@@ -82,12 +82,12 @@
             <h3>Download Our App</h3>
             <p>Download App fpr Android and iOS mobile phones.</p>
             <div class="app-logo">
-              <img src="/images/playStore.png" />
-              <img src="/images/app-store.png" />
+              <img src="playStore.png" />
+              <img src="app-store.png" />
             </div>
           </div>
           <div class="footer-col-2">
-            <img src="/images/shopping cart-logo_.png" width="100px" />
+            <img src="shopping cart-logo_.png" width="100px" />
             <p>
               Our purpose is to Sustainably Make the Pleasure and Benefits of
               Sports Accesible to Many.
